--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
 /* Alex Tresselt 6-26-22 */
+
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 200px;
+    height: 500px;
+}
